[package]
name = "ld55"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = {version="0.23.0", features=["debug-render-2d"]}
